--- a/app/src/main/res/layout/boolean_compound.xml
+++ b/app/src/main/res/layout/boolean_compound.xml
@@ -1,4 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2017. RoboRiot and/or its affiliates. All rights reserved.
+  ~ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+  ~
+  ~ This file is part of RoboRiot Scouting.
+  ~
+  ~ RoboRiot Scouting is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ RoboRiot Scouting is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with RoboRiot Scouting.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/compound_width"
     android:layout_height="wrap_content">
@@ -10,7 +29,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
-        android:text="ERROR"
+        android:text="@string/error"
         android:textSize="24sp"
         android:maxLines="1"
         android:ellipsize="marquee"
@@ -26,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvName"
         android:layout_centerHorizontal="true"
-        android:text="ToggleButton"
+        android:text="@string/error"
         android:textOff="@string/TxFalse"
         android:textOn="@string/TxTrue" />
 
